--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.14.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
   },
@@ -20,6 +21,7 @@
     "@types/node": "^20.1.4",
     "concurrently": "^8.0.1",
     "nodemon": "^2.0.22",
+    "prisma": "^4.14.0",
     "typescript": "^5.0.4"
   }
 }
