--- a/api/package.json
+++ b/api/package.json
@@ -17,11 +17,13 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^10.1.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.1.4",
     "concurrently": "^8.0.1",
     "nodemon": "^2.0.22",
     "prisma": "^4.14.0",
+    "prisma-erd-generator": "^1.7.0",
     "typescript": "^5.0.4"
   }
 }
